1.lab-stress-1/2/calico-allow-http-path.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
#kind: GlobalNetworkPolicy
metadata:
  name: calico-allow-http-path
  namespace: test
spec:
  #order: 10
  selector: label == 'logger1'
  types:
    - Ingress
    - Egress
  selector: all()
  ingress:
    - action: Allow
      http:
        methods: ['GET']
        paths:
          #- exact: '/tmp'
          - prefix: '/tmp'
  egress:
    - action: Allow

# currently doesn't work
