1.lab-stress-1/2/calico-deny-all.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-deny-all
  namespace: test
spec:
  order: 10
  selector: all()
  types:
    - Ingress
    - Egress
