1.lab-stress-1/2/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      name: logger1
  #policyTypes:
  #- Ingress
  ingress:
  #- from:
    #- podSelector:
    #    matchLabels:
    #      name: logger2
  - ports:
    - protocol: TCP
      port: 80
