1.lab-stress-1/2/networkpolicy1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: test
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-policy
  namespace: test    
spec:
  podSelector:
    matchLabels:
      name: logger2
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: logger1
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: logger1

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-policy
  namespace: test    
spec:
  podSelector:
    matchLabels:
      name: logger1
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: logger2
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: logger2
